# esp32s3-cam-stream

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: index.html  main.rs  reader.rs  web.rs
