[package]
name = "esp32s3-cam-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-ws = "0.3"
serialport = "4"
tokio = { version = "1", features = ["sync", "macros"] }
futures-util = "0.3"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
